// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parameters: bug parameter when value is number and passed 0 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "1",
    "content-type": "text/html; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "GET",
  },
  "status": 200,
  "text": "0",
}
`;

exports[`Parameters: should bind a method parameter to a cookie 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "2",
    "content-type": "text/html; charset=utf-8",
    "set-cookie": [
      "cookie=hey; Path=/",
    ],
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "GET",
  },
  "status": 200,
  "text": ":(",
}
`;

exports[`Parameters: should bind a method parameter to a query parameter 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "7",
    "content-type": "text/html; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "GET",
  },
  "status": 200,
  "text": "lolilol",
}
`;

exports[`Parameters: should bind a method parameter to a query parameter and cast to number 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "13",
    "content-type": "application/json; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "GET",
  },
  "status": 200,
  "text": "["number",12]",
}
`;

exports[`Parameters: should bind a method parameter to the next function 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/html; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "GET",
  },
  "status": 200,
  "text": "foo",
}
`;

exports[`Parameters: should bind a method parameter to the request body 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "13",
    "content-type": "application/json; charset=utf-8",
  },
  "req": {
    "data": {
      "foo": "bar",
    },
    "headers": {
      "content-type": "application/json",
    },
    "method": "POST",
  },
  "status": 200,
  "text": "{"foo":"bar"}",
}
`;

exports[`Parameters: should bind a method parameter to the request headers 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "11",
    "content-type": "text/html; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {
      "testhead": "fooTestHead",
    },
    "method": "GET",
  },
  "status": 200,
  "text": "fooTestHead",
}
`;

exports[`Parameters: should bind a method parameter to the request object 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/html; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Parameters: should bind a method parameter to the response object 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/html; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "GET",
  },
  "status": 200,
  "text": "foo",
}
`;

exports[`Parameters: should bind a method parameter to the url parameter of the web request 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/html; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "GET",
  },
  "status": 200,
  "text": "foo",
}
`;

exports[`Parameters: should bind a method parameter to the url parameter of the web request and cast to number 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "13",
    "content-type": "application/json; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "GET",
  },
  "status": 200,
  "text": "["number",42]",
}
`;
